syntax = "proto3";

package limiquantix.node.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// =============================================================================
// NODE DAEMON SERVICE
// =============================================================================
// This service runs on each hypervisor node and is called by the control plane
// to manage VMs directly on the physical host.

service NodeDaemonService {
  // =========================================================================
  // Health & Status
  // =========================================================================
  
  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Get node information and capabilities
  rpc GetNodeInfo(google.protobuf.Empty) returns (NodeInfoResponse);
  
  // =========================================================================
  // VM Lifecycle Operations
  // =========================================================================
  
  // Create a new VM (does not start it)
  rpc CreateVM(CreateVMOnNodeRequest) returns (CreateVMOnNodeResponse);
  
  // Start a VM
  rpc StartVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // Stop a VM gracefully (with timeout)
  rpc StopVM(StopVMRequest) returns (google.protobuf.Empty);
  
  // Force stop a VM (power off)
  rpc ForceStopVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // Reboot a VM
  rpc RebootVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // Pause a VM (freeze execution)
  rpc PauseVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // Resume a paused VM
  rpc ResumeVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // Delete a VM (must be stopped first)
  rpc DeleteVM(VMIdRequest) returns (google.protobuf.Empty);
  
  // =========================================================================
  // VM Status
  // =========================================================================
  
  // Get status of a specific VM
  rpc GetVMStatus(VMIdRequest) returns (VMStatusResponse);
  
  // List all VMs on this node
  rpc ListVMs(google.protobuf.Empty) returns (ListVMsOnNodeResponse);
  
  // =========================================================================
  // Console Access
  // =========================================================================
  
  // Get console connection information (VNC/SPICE)
  rpc GetConsole(VMIdRequest) returns (ConsoleInfoResponse);
  
  // =========================================================================
  // Snapshots
  // =========================================================================
  
  // Create a snapshot
  rpc CreateSnapshot(CreateSnapshotRequest) returns (SnapshotResponse);
  
  // Revert to a snapshot
  rpc RevertSnapshot(RevertSnapshotRequest) returns (google.protobuf.Empty);
  
  // Delete a snapshot
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (google.protobuf.Empty);
  
  // List all snapshots for a VM
  rpc ListSnapshots(VMIdRequest) returns (ListSnapshotsResponse);
  
  // =========================================================================
  // Metrics & Events (Streaming)
  // =========================================================================
  
  // Stream node and VM metrics
  rpc StreamMetrics(StreamMetricsRequest) returns (stream NodeMetrics);
  
  // Stream node events (VM started, stopped, crashed, etc.)
  rpc StreamEvents(google.protobuf.Empty) returns (stream NodeEvent);
}

// =============================================================================
// REQUEST/RESPONSE MESSAGES
// =============================================================================

// Health Check
message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string version = 2;
  string hypervisor = 3;       // "libvirt", "cloud-hypervisor"
  string hypervisor_version = 4;
  uint64 uptime_seconds = 5;
}

// Node Info
message NodeInfoResponse {
  string node_id = 1;
  string hostname = 2;
  string management_ip = 3;
  
  // Hardware info
  string cpu_model = 4;
  uint32 cpu_cores = 5;
  uint64 memory_total_bytes = 6;
  uint64 memory_available_bytes = 7;
  
  // OS info
  string os_name = 8;
  string os_version = 9;
  string kernel_version = 10;
  uint64 uptime_seconds = 11;
  
  // Hypervisor capabilities
  string hypervisor_name = 12;
  string hypervisor_version = 13;
  bool supports_live_migration = 14;
  bool supports_snapshots = 15;
  bool supports_hotplug = 16;
  uint32 max_vcpus = 17;
  uint64 max_memory_bytes = 18;
}

// VM Identification
message VMIdRequest {
  string vm_id = 1;
}

// Create VM - matches backend proto exactly
message CreateVMOnNodeRequest {
  string vm_id = 1;
  string name = 2;
  VMSpec spec = 3;
  map<string, string> labels = 4;
}

message VMSpec {
  // CPU configuration
  uint32 cpu_cores = 1;
  uint32 cpu_sockets = 2;
  uint32 cpu_threads_per_core = 3;
  
  // Memory configuration (in MiB)
  uint64 memory_mib = 4;
  bool memory_hugepages = 5;
  
  // Boot configuration
  Firmware firmware = 6;
  repeated BootDevice boot_order = 7;
  
  // Devices
  repeated DiskSpec disks = 8;
  repeated NicSpec nics = 9;
  repeated CdromSpec cdroms = 10;
  
  // Console
  ConsoleSpec console = 11;
  
  // Cloud-init / provisioning configuration
  CloudInitConfig cloud_init = 12;
}

// Cloud-init configuration for automated VM provisioning
message CloudInitConfig {
  // User-data (YAML format, typically #cloud-config)
  // Contains: users, packages, runcmd, write_files, etc.
  string user_data = 1;
  
  // Meta-data (JSON format)
  // Contains: instance-id, local-hostname, etc.
  string meta_data = 2;
  
  // Network configuration (Netplan v2 format, optional)
  string network_config = 3;
  
  // Vendor-data (optional, for provider-specific config)
  string vendor_data = 4;
}

enum Firmware {
  FIRMWARE_BIOS = 0;
  FIRMWARE_UEFI = 1;
}

enum BootDevice {
  BOOT_DEVICE_DISK = 0;
  BOOT_DEVICE_CDROM = 1;
  BOOT_DEVICE_NETWORK = 2;
}

message DiskSpec {
  string id = 1;
  string path = 2;              // Path to disk image (empty = auto-create)
  uint64 size_gib = 3;
  DiskBus bus = 4;
  DiskFormat format = 5;
  bool readonly = 6;
  bool bootable = 7;
  
  // QoS settings
  uint64 iops_limit = 8;
  uint64 throughput_mbps = 9;
  
  // Cloud image support
  string backing_file = 10;     // Path to backing image (e.g., cloud image)
                                // If set, creates a copy-on-write overlay
}

enum DiskBus {
  DISK_BUS_VIRTIO = 0;
  DISK_BUS_SCSI = 1;
  DISK_BUS_SATA = 2;
  DISK_BUS_IDE = 3;
}

enum DiskFormat {
  DISK_FORMAT_QCOW2 = 0;
  DISK_FORMAT_RAW = 1;
}

message NicSpec {
  string id = 1;
  string mac_address = 2;       // Optional, auto-generated if empty
  string bridge = 3;            // Bridge to connect to
  string network = 4;           // Virtual network name
  NicModel model = 5;
  
  // QoS settings
  uint64 bandwidth_mbps = 6;
}

enum NicModel {
  NIC_MODEL_VIRTIO = 0;
  NIC_MODEL_E1000 = 1;
  NIC_MODEL_RTL8139 = 2;
}

message CdromSpec {
  string id = 1;
  string iso_path = 2;          // Path to ISO file
  bool bootable = 3;
}

message ConsoleSpec {
  bool vnc_enabled = 1;
  uint32 vnc_port = 2;          // 0 = auto-assign
  string vnc_password = 3;      // Optional
  bool spice_enabled = 4;
  uint32 spice_port = 5;
}

message CreateVMOnNodeResponse {
  string vm_id = 1;
  bool created = 2;
  string message = 3;
}

// Stop VM
message StopVMRequest {
  string vm_id = 1;
  uint32 timeout_seconds = 2;   // Graceful shutdown timeout
}

// VM Status
message VMStatusResponse {
  string vm_id = 1;
  string name = 2;
  PowerState state = 3;
  double cpu_usage_percent = 4;
  uint64 memory_used_bytes = 5;
  uint64 memory_total_bytes = 6;
  google.protobuf.Timestamp started_at = 7;
}

enum PowerState {
  POWER_STATE_UNKNOWN = 0;
  POWER_STATE_RUNNING = 1;
  POWER_STATE_STOPPED = 2;
  POWER_STATE_PAUSED = 3;
  POWER_STATE_SUSPENDED = 4;
  POWER_STATE_CRASHED = 5;
}

message ListVMsOnNodeResponse {
  repeated VMStatusResponse vms = 1;
}

// Console
message ConsoleInfoResponse {
  string console_type = 1;      // "vnc" or "spice"
  string host = 2;
  uint32 port = 3;
  string password = 4;          // VNC password if set
  string websocket_path = 5;    // For noVNC
}

// Snapshots
message CreateSnapshotRequest {
  string vm_id = 1;
  string name = 2;
  string description = 3;
  bool quiesce = 4;             // Request guest agent to freeze filesystems
}

message SnapshotResponse {
  string snapshot_id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  PowerState vm_state = 5;      // State of VM when snapshot was taken
  string parent_id = 6;         // Parent snapshot ID (for tree)
}

message RevertSnapshotRequest {
  string vm_id = 1;
  string snapshot_id = 2;
}

message DeleteSnapshotRequest {
  string vm_id = 1;
  string snapshot_id = 2;
}

message ListSnapshotsResponse {
  repeated SnapshotResponse snapshots = 1;
}

// Metrics
message StreamMetricsRequest {
  uint32 interval_seconds = 1;  // Reporting interval
}

message NodeMetrics {
  google.protobuf.Timestamp timestamp = 1;
  
  // Node-level metrics
  double cpu_usage_percent = 2;
  uint64 memory_used_bytes = 3;
  uint64 memory_total_bytes = 4;
  
  // Per-VM metrics
  repeated VMMetrics vms = 5;
}

message VMMetrics {
  string vm_id = 1;
  string name = 2;
  double cpu_usage_percent = 3;
  uint64 memory_used_bytes = 4;
  uint64 disk_read_bytes = 5;
  uint64 disk_write_bytes = 6;
  uint64 network_rx_bytes = 7;
  uint64 network_tx_bytes = 8;
}

// Events
message NodeEvent {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  EventType type = 3;
  string vm_id = 4;             // If event is VM-related
  string message = 5;
  map<string, string> metadata = 6;
}

enum EventType {
  EVENT_TYPE_UNKNOWN = 0;
  EVENT_TYPE_VM_STARTED = 1;
  EVENT_TYPE_VM_STOPPED = 2;
  EVENT_TYPE_VM_PAUSED = 3;
  EVENT_TYPE_VM_RESUMED = 4;
  EVENT_TYPE_VM_CRASHED = 5;
  EVENT_TYPE_VM_REBOOTED = 6;
  EVENT_TYPE_SNAPSHOT_CREATED = 7;
  EVENT_TYPE_SNAPSHOT_REVERTED = 8;
  EVENT_TYPE_SNAPSHOT_DELETED = 9;
  EVENT_TYPE_NODE_OVERLOADED = 10;
  EVENT_TYPE_NODE_RECOVERED = 11;
}
